--- a/app/templates/editor/code.hbs
+++ b/app/templates/editor/code.hbs
@@ -1,1 +1,4 @@
-{{view Proto.CodeContainer id="code-container"}}
+<div class="code-container">
+    <textarea id="myTextArea"></textarea>
+    {{view Proto.CodeContainer}}
+</div>
