--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -57,5 +57,26 @@ $editor-background: rgb(247, 247, 247);
         }
       }
     }
+
+    .canvas-workspace {
+      width: 100%;
+      height: 94%;
+
+
+      .code-container {
+        width: 100%;
+        height: 100%;
+
+        #myTextArea {
+          width: 100%;
+          height: 100%;
+        }
+        .CodeMirror {
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+    }
   }
 }
