--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -9,9 +9,11 @@
 
     <section class="sidebar">
         <aside>
+            <header class=".project-head label-title">Project Tree</header>
             {{ project-tree }}
         </aside>
         <aside>
+            <header class=".property-head label-title">Element Inspector</header>
             {{ property-inspector }}
         </aside>
     </section>
