--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -14,7 +14,7 @@
         </aside>
         <aside>
             <header class=".property-head label-title">Element Inspector</header>
-            {{ property-inspector }}
+            {{ property-inspector elemid=elementId text=text }}
         </aside>
     </section>
 
