--- a/app/styles/_property-inspector.scss
+++ b/app/styles/_property-inspector.scss
@@ -1,11 +1,25 @@
 .editor aside>div {
-  height: 90%;
+  height: 92%;
   overflow: auto;
 }
 
 .property-inspector {
-  position: relative;
 
+  .options-list {
+    margin: 0;
+    padding: 0;
 
+    li {
+      padding: 2px 0 2px 15px;
+      list-style: none;
+      background-color: #eee;
+
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+
+    }
+  }
 
 }
