--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -29,7 +29,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
       }
     }
 
-    a{
+    a {
       text-decoration: none;
       color: #ccc;
     }
@@ -41,7 +41,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
     border-right: 1px solid #ddd;
     height: 90%;
 
-    aside{
+    aside {
       height: 50%;
     }
 
@@ -63,7 +63,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
       text-align: right;
       background-color: #ddd;
 
-      a{
+      button {
         display: inline-block;
         background-color: rgb(238, 238, 238);
         height: 40px;
@@ -72,29 +72,39 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
         color: #696969;
         text-decoration: none;
         border-radius: 0 0 5px 5px;
+        border: 0;
+
+        &:hover {
+          background-color: rgb(238, 228, 228);
+        }
 
         &.active {
-         background-color: $editor-background;
+          background-color: $editor-background;
         }
       }
     }
 
     .canvas-workspace {
+      float: right;
       width: 100%;
       height: 94%;
 
-
-      .code-container {
+      .code {
         width: 100%;
         height: 100%;
 
-        #myTextArea {
+        .code-container {
           width: 100%;
           height: 100%;
-        }
-        .CodeMirror {
-          height: 100%;
-          width: 100%;
+
+          #myTextArea {
+            width: 100%;
+            height: 100%;
+          }
+          .CodeMirror {
+            height: 100%;
+            width: 100%;
+          }
         }
       }
 
