--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -21,7 +21,7 @@
         </aside>
         <aside>
             <header class="label-title">Element Inspector</header>
-            {{ property-inspector }}
+            {{ property-inspector elemid=elementId }}
         </aside>
     </section>
 
