observes for css props

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -21,7 +21,13 @@
         </aside>
         <aside>
             <header class="label-title">Element Inspector</header>
-            {{ property-inspector elemid=elementId }}
+            {{ property-inspector
+                    elemid=elementId
+                    width=width
+                    height=height
+                    x_pos=x_pos
+                    y_pos=y_pos
+            }}
         </aside>
     </section>
 
