added some codemirror code

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -2,7 +2,7 @@
 
     <header class="main">
         <h1>Proto
-            {{#link-to 'editor.design'}}Design{{/link-to}}
+            {{#link-to 'editor'}}Design{{/link-to}}
         </h1>
 
         <div class="project-controls">
