--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -34,7 +34,7 @@
     <div class="workspace">
 
         <div class="canvas-workspace">
-            {{view Proto.CodeContainer isVisibleBinding="editCode"}}
+            {{view Proto.CodeContainer id="code-container" isVisibleBinding="editCode"}}
             {{view Proto.Canvas isVisibleBinding="editDesign"}}
         </div>
 
