--- a/app/styles/_canvas.scss
+++ b/app/styles/_canvas.scss
@@ -12,7 +12,7 @@
       border: 1px solid #666;
     }
     .canvas-element {
-      overflow: hidden;
+      //overflow: hidden;
       .inner {
         width: 90%;
         display: block;
@@ -21,17 +21,54 @@
         text-overflow: ellipsis;
         text-indent: 5px;
       }
-      &.over {
+      .delete {
+        display: none;
+        position: absolute;
+        top: -7px;
+        right: -7px;
+        font-size: 14px;
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
         border: 1px solid #666;
+        background-color: #fff;
+        cursor: pointer;
+        z-index: 2;
+        text-align: center;
+        text-indent: 0;
+        @include border-radius(10px);
+      }
+      &:hover {
+        .delete {
+          display: block;
+        }
+      }
+      &.ui-draggable-dragging {
+        &:hover {
+          .delete {
+            display: none;
+          }
+        }
       }
       &.ui-selected {
-        border: 1px solid rgba(204, 0, 0, 0.5);
+        &:after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(204, 0, 0, 0.1);
+          display: block;
+          z-index: 1;
+        }
       }
       &.panel {
         $height: 99px;
         height: $height;
       }
       &.text {
+        min-width: 50px;
         .inner {
           width: auto;
         }
@@ -151,6 +188,8 @@
       }
     }
   }
-
-
+}
+.ui-selectable-helper {
+  background-color: #cc0000;
+  opacity: 0.1;
 }
