--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -4,12 +4,14 @@ $sub-label-color: rgb(210, 105, 97);
 $sub-label-hover: #bd4b45;
 $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
 
+/*-- Editor body --*/
 .editor {
   font-family: $font;
   background-color: $editor-background;
   border: 1px solid #ddd;
   height: 100%;
 
+/*-- Editor heading styles --*/
   header {
     background-color: $header-color;
     color: white;
@@ -17,8 +19,10 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
     padding: 10px;
     height: 10%;
 
+/*-- Main editor heading --*/
     &.main {
       height: 5%;
+//      min-height:50px;
       padding: 0;
 
       h1 {
@@ -76,8 +80,8 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
     float: left;
     width: 20%;
     border-right: 1px solid #ddd;
-    height: 94%;
-
+    height: 95%;
+//    min-height: 750px;
     aside {
       height: 50%;
     }
@@ -86,6 +90,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
   .workspace {
     width: 80%;
     height: 95%;
+//    min-height: 750px;
     float: left;
     position: relative;
 
@@ -122,21 +127,26 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
       width: 100%;
       height: 95%;
 
-      .code {
-        width: 100%;
+      &>.ember-view {
         height: 100%;
+        width: 100%;
+
+        .canvas-view {
+          height: 100%;
+          .canvas {
+            height: 86.9%;
+          }
+        }
 
         .code-container {
           width: 100%;
           height: 100%;
-
           .CodeMirror {
             height: 99.5%;
             width: 100%;
           }
         }
       }
-
     }
   }
 }
