event code generated

--- a/app/templates/components/canvas.hbs
+++ b/app/templates/components/canvas.hbs
@@ -7,6 +7,6 @@
         <div class="panel toolbar-element">Panel</div>
     </div>
 
-    {{ view Proto.CanvasContainer id="canvas"}}
+    {{ view Proto.CanvasContainer id="document"}}
 
 </div>
