--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -6,7 +6,12 @@
         {{#if isObjExpanded}}
             <ul class="options-list">
                 <li>Name {{view Ember.TextField valueBinding="props.text" action="updateText" }}</li>
-
+                <li>ID {{view Ember.TextField valueBinding="props.recordId" action="updateId" }}</li>
+                {{#if isInput}}
+                   <li>Lines
+                        {{view Ember.Select}}
+                   </li>
+                {{/if}}
             </ul>
         {{/if}}
 
