screens routing fixes - not finished yet

--- a/app/templates/screen.hbs
+++ b/app/templates/screen.hbs
@@ -1,6 +1,8 @@
-{{view Proto.CodeContainer id="code-container" isVisibleBinding="editCode"}}
+{{ name }}
 
-{{view Proto.Canvas isVisibleBinding="editDesign" elements=elements}}
+{{view Proto.CodeContainer id="code-container" isVisibleBinding="editCode" contentBinding="this"}}
+
+{{view Proto.Canvas isVisibleBinding="editDesign" contentBinding="this"}}
 
 <footer>
     <button {{bind-attr class="editDesign:active"}}{{action "setDesignView" on="click"}}>Design View</button>
