--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -114,6 +114,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
 
         &:hover {
           background-color: rgb(238, 228, 228);
+          cursor: pointer;
         }
 
         &.active {
