--- a/app/styles/_property-inspector.scss
+++ b/app/styles/_property-inspector.scss
@@ -5,6 +5,27 @@
 
 .property-inspector {
 
+  .inspector-tabs {
+    padding: 0;
+    .inspector-tab {
+      border-radius: 5px 5px 0 0;
+      padding: 4px 9px;
+      display: inline-block;
+      height: 100%;
+      background-color: $sub-label-hover;
+      &:hover {
+        background-color: rgb(184, 92, 86);
+        cursor: pointer;
+      }
+      &.active{
+        background-color: $sub-label-color;
+      }
+    }
+  }
+
+
+
+
   .options-list {
     margin: 0;
     padding: 0;
