--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -1,75 +1,92 @@
 <div class="property-inspector">
 
     <div class="property-body">
+        <header class="label-title inspector-tabs">
+            <div {{ bind-attr class=":inspector-tab isElementSelected:active" }} {{action 'showElement'}}>Element</div>
+            <div {{ bind-attr class=":inspector-tab isEventsSelected:active" }} {{action 'showEvents'}}>Events</div>
+        </header>
 
-        <header class="sub-label" {{action 'toggleObj'}}>Object: {{props.type}}</header>
-        {{#if isObjExpanded}}
-            <ul class="options-list">
-                <li>Name {{view Ember.TextField valueBinding="props.text" action="updateText" }}</li>
-                <li>ID {{view Ember.TextField valueBinding="props.recordId" action="updateId" }}</li>
-                {{#if isBtn}}
-                    <li><label>URL</label> {{view Ember.TextField}}</li>
-                {{/if}}
-                {{#if isText}}
-                    <li><label>URL</label> {{view Ember.TextField}}</li>
-                {{/if}}
-                {{#if isInput}}
-                   <li>Lines
-                        {{view Ember.Select}}
-                   </li>
-                {{/if}}
-            </ul>
-        {{/if}}
+        {{#if isElementSelected}}
 
-
-        <header class="sub-label" {{action 'toggleAttr'}}>Attributes</header>
-        {{#if isAttrExpanded}}
-            <ul class="options-list">
-                <li><label>Width</label> {{view Ember.TextField valueBinding="props.width" action="updateWidth"}}</li>
-                <li><label>Height</label> {{view Ember.TextField valueBinding="props.height" action="updateHeight"}}</li>
-                <li><label>x-pos</label> {{view Ember.TextField valueBinding="props.x_pos" action="updateX"}}</li>
-                <li><label>y-pos</label> {{view Ember.TextField valueBinding="props.y_pos" action="updateY"}}</li>
-                <li><label>Hint</label> {{view Ember.TextField valueBinding="props.hint" action="updateHint"}}</li>
-                <li><label>Stack Index</label> {{view Ember.TextField valueBinding="props.stack" action="updateStack"}}</li>
-            </ul>
-        {{/if}}
-
-        <header class="sub-label" {{action 'toggleStyle'}}>Style</header>
-        {{#if isStyleExpanded}}
-            <ul class="options-list">
-                <li class="toggle"><span {{action 'toggleFont'}} class="inner-toggle"><span class="font">Font</span><span class="caret"></span></span>
-                    {{#if isFontExpanded}}
-                        <ul>
-                            <li><label>font-family</label> {{view Ember.TextField}}</li>
-                            <li><label>font-size</label> {{view Ember.TextField}}</li>
-                            <li><label>color</label> {{view Ember.TextField}}</li>
-                            <li><label>style</label> {{view Ember.TextField}}</li>
-                            <li><label>line-height</label> {{view Ember.TextField}}</li>
-                        </ul>
+            <header class="sub-label" {{action 'toggleObj'}}>Object: {{props.type}}</header>
+            {{#if isObjExpanded}}
+                <ul class="options-list">
+                    <li>Name {{view Ember.TextField valueBinding="props.text" action="updateText" }}</li>
+                    <li>ID {{view Ember.TextField valueBinding="props.ID" action="updateId" }}</li>
+                    {{#if isBtn}}
+                        <li><label>URL</label> {{view Ember.TextField}}</li>
                     {{/if}}
-                </li>
-
-                <li class="toggle"><span {{action 'toggleBg'}} class="inner-toggle bg"><span class="background">Background</span><span class="caret"></span></span>
-                    {{#if isBgExpanded}}
-                        <ul>
-                            <li><label>color</label> {{view Ember.TextField}}</li>
-                            <li><label>image</label> {{view Ember.TextField}}</li>
-                        </ul>
+                    {{#if isText}}
+                        <li><label>URL</label> {{view Ember.TextField}}</li>
                     {{/if}}
-                </li>
-            </ul>
+                    {{#if isInput}}
+                       <li>Lines
+                           {{view Ember.Select
+                               content=modes
+                               optionValuePath="content.mode"
+                               optionLabelPath="content.title"
+                               value=props.mode
+                               action="updateMode"}}
+                           {{ props.mode }}
+                       </li>
+                    {{/if}}
+                </ul>
+            {{/if}}
+
+
+            <header class="sub-label" {{action 'toggleAttr'}}>Attributes</header>
+            {{#if isAttrExpanded}}
+                <ul class="options-list">
+                    <li><label>Width</label> {{view Ember.TextField valueBinding="props.width" action="updateWidth"}}</li>
+                    <li><label>Height</label> {{view Ember.TextField valueBinding="props.height" action="updateHeight"}}</li>
+                    <li><label>x-pos</label> {{view Ember.TextField valueBinding="props.x_pos" action="updateX"}}</li>
+                    <li><label>y-pos</label> {{view Ember.TextField valueBinding="props.y_pos" action="updateY"}}</li>
+                    <li><label>Hint</label> {{view Ember.TextField valueBinding="props.hint" action="updateHint"}}</li>
+                    <li><label>Stack Index</label> {{view Ember.TextField valueBinding="props.stack" action="updateStack"}}</li>
+                </ul>
+            {{/if}}
+
+            <header class="sub-label" {{action 'toggleStyle'}}>Style</header>
+            {{#if isStyleExpanded}}
+                <ul class="options-list">
+                    <li class="toggle"><span {{action 'toggleFont'}} class="inner-toggle"><span class="font">Font</span><span class="caret"></span></span>
+                        {{#if isFontExpanded}}
+                            <ul>
+                                <li><label>font-family</label> {{view Ember.TextField}}</li>
+                                <li><label>font-size</label> {{view Ember.TextField}}</li>
+                                <li><label>color</label> {{view Ember.TextField}}</li>
+                                <li><label>style</label> {{view Ember.TextField}}</li>
+                                <li><label>line-height</label> {{view Ember.TextField}}</li>
+                            </ul>
+                        {{/if}}
+                    </li>
+
+                    <li class="toggle"><span {{action 'toggleBg'}} class="inner-toggle bg"><span class="background">Background</span><span class="caret"></span></span>
+                        {{#if isBgExpanded}}
+                            <ul>
+                                <li><label>color</label> {{view Ember.TextField}}</li>
+                                <li><label>image</label> {{view Ember.TextField}}</li>
+                            </ul>
+                        {{/if}}
+                    </li>
+                </ul>
+            {{/if}}
         {{/if}}
 
-        <header class="sub-label" {{action 'toggleEvents'}}>Events</header>
-        {{#if isEventsExpanded}}
-            <ul class="options-list">
-                <li><label>Click</label> {{view Ember.Select}}</li>
-                <li><label>Double Click</label> {{view Ember.Select}}</li>
-                <li><label>Mouse Enter</label> {{view Ember.Select}}</li>
-                <li><label>Mouse Leave</label> {{view Ember.Select}}</li>
-                <li><label>Focus In</label> {{view Ember.Select}}</li>
-                <li><label>Focus Out</label> {{view Ember.Select}}</li>
-            </ul>
+
+
+        {{#if isEventsSelected}}
+
+            <header class="sub-label" {{action 'toggleEvents'}}>Events</header>
+                <ul class="options-list">
+                    <li><label>Click</label></li>
+                    <li><label>Double Click</label></li>
+                    <li><label>Mouse Enter</label></li>
+                    <li><label>Mouse Leave</label></li>
+                    <li><label>Focus In</label></li>
+                    <li><label>Focus Out</label></li>
+                </ul>
         {{/if}}
+
     </div>
 </div>
