--- a/app/styles/_canvas.scss
+++ b/app/styles/_canvas.scss
@@ -137,6 +137,16 @@
     text-align: left;
     vertical-align: top;
     text-indent: 5px;
+    &.singleline{
+      min-height: 40px;
+      max-height: 40px;
+      height: 40px;
+    }
+    &.multiline{
+      min-height: 80px;
+      max-height: none;
+      height: 80px;
+    }
   }
 
   .text {
@@ -167,25 +177,41 @@
   }
   /* ---- END canvas elements ---- */
 
-  .toolbar {
-//    margin: 20px 10px 10px 10px;
-    padding: 10px;
-//    border: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    &>div {
-      margin-right: 10px;
-      &:last-child {
-        margin: 0;
-      }
-      &.text {
-        &:before {
-          content: '<';
-          margin-right: 5px;
-        }
-        &:after {
-          content: '>';
-          margin-left: 5px;
-        }
+//  .toolbar {
+////    margin: 20px 10px 10px 10px;
+//    padding: 10px;
+////    border: 1px solid #ddd;
+//    border-bottom: 1px solid #ddd;
+//    &>div {
+//      margin-right: 10px;
+//      &:last-child {
+//        margin: 0;
+//      }
+//      &.text {
+//        &:before {
+//          content: '<';
+//          margin-right: 5px;
+//        }
+//        &:after {
+//          content: '>';
+//          margin-left: 5px;
+//        }
+//      }
+//    }
+//  }
+
+  .toolbar{
+    .toolbar-element {
+      padding:10px;
+      font-size: 2em;
+      color: white;
+      position: relative;
+
+      &.btn, &.input, &.text, &.panel{
+        width: auto;
+        height: auto;
+        border: none;
+        background-color: transparent;
       }
     }
   }
