--- a/app/templates/components/canvas.hbs
+++ b/app/templates/components/canvas.hbs
@@ -1,10 +1,17 @@
 <div class="canvas-view">
 
-    <div class="toolbar">
+   <!-- <div class="toolbar">
         <div class="btn toolbar-element">Button</div>
         <div class="input toolbar-element">Input</div>
         <div class="text toolbar-element">Text</div>
         <div class="panel toolbar-element">Panel</div>
+    </div> -->
+
+    <div class="toolbar">
+        <div class="btn toolbar-element fa fa-square-o"></div>
+        <div class="input toolbar-element fa fa-text-width fa-2x"></div>
+        <div class="text toolbar-element fa fa-font"></div>
+        <div class="panel toolbar-element fa fa-columns"></div>
     </div>
 
     {{ view Proto.CanvasContainer id="document" contentBinding="this"}}
