--- a/app/styles/_canvas.scss
+++ b/app/styles/_canvas.scss
@@ -2,7 +2,7 @@
   .canvas {
     margin: 10px 10px;
     background-color: #eee;
-    min-height: 600px;
+//    min-height: 600px;
     background-image: url('../images/gird-bg.png?test=123');
     position: relative;
     z-index: 1;
@@ -201,17 +201,29 @@
 //  }
 
   .toolbar{
+    position: absolute;
+    top: -2px;
+    left: 449px;
+    height: auto;
+
+
     .toolbar-element {
       padding:10px;
       font-size: 2em;
       color: white;
-      position: relative;
+      max-height: 48px;
+      vertical-align: middle;
 
       &.btn, &.input, &.text, &.panel{
         width: auto;
         height: auto;
         border: none;
         background-color: transparent;
+
+        &:hover{
+          cursor: pointer;
+          color: #ccc;
+        }
       }
     }
   }
