--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -36,9 +36,11 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
 
       .project-controls {
         margin-left: 20px;
+        padding-right: 20px;
         display: inline-block;
         height: 100%;
         vertical-align: middle;
+        border-right: 1px solid #ddd;
 
         .icons {
           font-size: 2em;
@@ -90,13 +92,11 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
   .workspace {
     width: 80%;
     height: 95%;
-//    min-height: 750px;
     float: left;
-    position: relative;
 
     footer {
+      height: 7%;
       width: 100%;
-      position: absolute;
       bottom: 0;
       text-align: right;
       background-color: #ddd;
@@ -126,16 +126,17 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
     .canvas-workspace {
       float: right;
       width: 100%;
-      height: 95%;
+      height: 100%;
+      overflow: hidden;
 
       &>.ember-view {
-        height: 100%;
+        height: 93%;
         width: 100%;
 
         .canvas-view {
           height: 100%;
           .canvas {
-            height: 86.9%;
+            height: 98.5%;
           }
         }
 
