--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -25,8 +25,7 @@
                                content=modes
                                optionValuePath="content.mode"
                                optionLabelPath="content.title"
-                               value=props.mode
-                               action="updateMode"}}
+                               value=props.mode}}
                        </li>
                     {{/if}}
                 </ul>
