screen add/edit

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -33,6 +33,8 @@
             {{ project-tree screens=model }}
         </aside>
 
+        {{screen-modal edit=edit screenTitle=screenTitle}}
+
     </section>
 
     <div class="workspace">
