--- a/app/templates/components/screen-modal.hbs
+++ b/app/templates/components/screen-modal.hbs
@@ -3,7 +3,7 @@
 
     <div class="screen-modal-frm">
         <label>Screen Title</label>
-        {{input type="text" value=screenTitle}}
+        {{input type="text" value=screenTitle action="saveTitle"}}
 
         <button class="button" {{ action saveTitle screenTitle }}>Save</button>
         <button class="button gray" {{ action closeEdit }}>Cancel</button>
