--- a/app/templates/components/screen-modal.hbs
+++ b/app/templates/components/screen-modal.hbs
@@ -5,7 +5,7 @@
         <label>Screen Title</label>
         {{input type="text" value=screenTitle action="saveTitle"}}
 
-        <button class="button" {{ action saveTitle screenTitle }}>Save</button>
+        <button class="button" {{ action saveTitle }}>Save</button>
         <button class="button gray" {{ action closeEdit }}>Cancel</button>
     </div>
 </div>
