--- a/app/styles/_canvas.scss
+++ b/app/styles/_canvas.scss
@@ -23,8 +23,8 @@
       .delete {
         display: none;
         position: absolute;
-        top: -7px;
-        right: -7px;
+        top: -14px;
+        right: -14px;
         font-size: 14px;
         width: 20px;
         height: 20px;
@@ -35,6 +35,7 @@
         z-index: 2;
         text-align: center;
         text-indent: 0;
+        margin: 5px;
         @include border-radius(10px);
       }
       &:hover {
